--- a/Diver-Pacman/dp.html
+++ b/Diver-Pacman/dp.html
@@ -11,7 +11,7 @@
 <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#9f00a7">
 <meta name="theme-color" content="#ffffff">
-<link rel='stylesheet' href='https://fonts.cdnfonts.com/css/eight-track?styles=1919'>
+<link href="https://fonts.cdnfonts.com/css/eight-track" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="Pacmangame.css">
 <link rel="stylesheet" type="text/css" href="Botones_neon.css">
 </head>
