--- a/Diver-Battle/db.html
+++ b/Diver-Battle/db.html
@@ -393,18 +393,18 @@
   }
 }
 
-#kitty{
+#diverb{
   border-radius: 15px;
   width: 815px;
   overflow: hidden;
   margin: 8em auto;  <!-- /*Image central verticalmente*/  -->
    
 }
-#kitty img, #kitty img:hover{
+#diverb img, #diverb img:hover{
   transition: .3s;
 }
 
-#kitty img:hover{
+#diverb img:hover{
   filter: blur(30px);
 }
 
@@ -436,7 +436,7 @@
 
 <body translate="no" >
 
-<div id="kitty"><img src="DIVERBATTLE.PNG" alt="" width="815">
+<div id="diverb"><img src="DIVERBATTLE.PNG" alt="diverb" width="815">
 </div>
 
 <div class="meteor-container">
