--- a/Diver-Battle/db.html
+++ b/Diver-Battle/db.html
@@ -436,7 +436,7 @@
 
 <body translate="no" >
 
-<div id="diverb"><img src="DIVERBATTLE.PNG" alt="diverb" width="815">
+<div id="diverb"><img src="https://i.imgur.com/6cyEbhP.png" alt="diverb" width="815">
 </div>
 
 <div class="meteor-container">
